docu/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: docs
spec:
  selector:
    app: docs
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
