docu/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docs-ingress
  namespace: docs
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: "hemidall.dev"
    http:
      paths:
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: docs
            port:
              number: 80
